--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     text-decoration: none;
 }
 
+body{
+    height: 100vh;
+}
+
 header{
     height: 90px;
     display:flex;
@@ -144,7 +148,7 @@ span{
     display: none;
 }
 .footer-list{
-    display: flex;
+    display: block;
    flex-direction :column;
    align-items: center;
 
@@ -155,13 +159,15 @@ span{
         display: block;
     }
 
+    
+
     nav{
         display: none;
     }
 
     
     #banner{
-        background-position: 40%;
+        background-position: 100%;
     }
 
     #traller-container{
@@ -199,6 +205,10 @@ span{
     .botao{
         width: 100%;
         margin-top: 30px;
+    }
+
+    body{
+        height: 100vh;
     }
 
 
